# src/route/ProductRoute.js
@@ -4,7 +4,7 @@ const auth = require('../middlewares/auth.js');
 
 const Router = express.Router();
 
-Router.get('/',productController.getAllProducts);
+Router.get('/',auth,productController.getAllProducts);
 Router.post('/',auth,productController.addProduct);
 Router.get('/:productId',productController.getProductById);
 
